...
    <string name="invalid_userid">Invalid User ID, please enter a number between 1 - 4,294,967,294</string>
    <string name="issue_card_count">Issue Count</string>
    <string name="korean_day">요일</string>
    <string name="language">en</string>
    <string name="latest_version">Version is up to date</string>
    <string name="log_out">LOG OUT</string>
    <string name="login">Login</string>
    <string name="login_empty">Missing ID/Password/URL</string>
    <string name="login_expire">Login Expired</string>
    <string name="login_fail">Login Failed</string>
    <string name="login_id">Login ID</string>
    <string name="low_quality">Insufficient Fingerprint Quality</string>
    <string name="manual_lock">Manual Lock</string>
    <string name="manual_unlock">Manual Unlock</string>
    <string name="max_size">Exceeded Registration Limit</string>
    <string name="memory_poor">Insufficient Memory</string>
    <string name="menu">Menu</string>
...
    <string name="mobile_card">Mobile Smart Card</string>
    <string name="mobile_card_upper">MOBILE SMART CARD</string>
    <string name="monitoring">Monitoring</string>
    <string name="monitoring_upper">MONITORING</string>
    <string name="myprofile">My Profile</string>
    <string name="myprofile_upper">MY PROFILE</string>
    <string name="name">Name</string>
    <string name="nd">nd</string>
    <string name="need_latest_server_version">{0} or higher version should be installed.</string>
    <string name="need_permission_ble">In order to use mobile card, set to use BLE.</string>
    <string name="need_permission_storage">In order to enroll a user photo, access to the camera and the album.</string>
    <string name="new_">New</string>
    <string name="new_notification">New Notification</string>
    <string name="new_user">New User</string>
    <string name="new_version">A newer version is available, would you like to update?</string>
    <string name="nfc_not_support">This mobile does not support NFC mobile card.</string>
    <string name="no_more_data">End of Data</string>
    <string name="no_permission">You do not have the sufficient permissions</string>
    <string name="non_blocked">Access-on-card can be deleted after blocking. </string>
    <string name="none">None</string>
    <string name="none_card_layout_format">Smart Card Layout is not applied. </string>
    <string name="none_data">There is no available data</string>
    <string name="none_device">Device not found</string>
    <string name="none_door">Door not found</string>
    <string name="none_registered_fingerprint">There is no registered fingerprint data. </string>
    <string name="none_select_card">No card input(selection) was made.</string>
...
    <string name="only_number">Enter only Numbers</string>
    <string name="only_number_dash">Enter only enter numbers and dash(-), or plus(+)</string>
    <string name="open">Open</string>
    <string name="open_door_time">Door Open Time</string>
    <string name="open_door_time_des">(in 3 hours)</string>
    <string name="open_time">Open Time</string>
    <string name="operator">BioStar Operator</string>
    <string name="over_value">Max value exceeded.</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="password_display">********</string>
    <string name="password_empty">Enter Password</string>
    <string name="password_guide">Password must contain a minimum of 8 characters that include at lease one letter and one number.</string>
    <string name="password_guide_strong">Password must contain a minimum of 8 characters that include at least one lowercase letter, one uppercase letter, one number and one special character.</string>
    <string name="password_invalid">Password does not match</string>
...
    <string name="user">User</string>
    <string name="user_add">Add User</string>
    <string name="user_create_empty">ID is required</string>
    <string name="user_create_empty_email">Enter Email Address</string>
    <string name="user_create_empty_idpassword">ID and Password must be entered</string>
    <string name="user_create_success">User Successfully Created</string>
    <string name="user_id">User ID</string>
    <string name="user_modify_success">User Successfully Modified</string>
    <string name="user_other_device_mobile_card">This card is used by another mobile device. </string>
    <string name="user_upper">USER</string>
    <string name="verify_finger">Verify Fingerprint</string>
    <string name="version_mobile">BioStar 2 Mobile Version</string>
    <string name="view_log">View Log</string>
...
