<?xml version="1.0" encoding="utf-8"?><!-- <~SCREEN NAME)> {Popup} </~SCREEN NAME> -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/main_container"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <!--
        <LinearLayout
...
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="220.8dp"
            android:cacheColorHint="#00000000"
            android:fadeScrollbars="false"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
...
