<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/selector_btn_save"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="always"/>
</menu>
