...
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"/>
        </FrameLayout>

        <com.supremainc.biostar2.view.MainMenuView
            android:id="@+id/main_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:gravity="center"/>
    </LinearLayout>
...
